--- a/style/css/style.css
+++ b/style/css/style.css
@@ -3,46 +3,72 @@
   padding: 0;
 }
 
+.right {
+  margin-left: auto;
+}
+
+@keyframes loading {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 /* Navigation style */
-nav {
+.navContainer {
   background-color: rgb(245, 221, 102);
   display: flex;
   padding: 1%;
-  border-bottom: 3px solid maroon;
 }
-nav .logo {
+.navContainer .logo {
   color: maroon;
   padding-left: 10px;
   cursor: pointer;
+  transition: all 0.3s;
 }
-nav .menuButton {
+.navContainer .menuButton {
   display: none;
   padding-right: 10px;
+  transition: all 0.3s;
 }
-nav ul {
+.navContainer .navMenu {
   list-style: none;
   display: flex;
 }
-nav ul li a {
+.navContainer .navMenu .navItem {
+  transition: all 0.4s;
+}
+.navContainer .navMenu .navLink {
   text-decoration: none;
   color: black;
   margin-right: 20px;
+  transition: all 0.4s;
+}
+.navContainer .navItem:hover {
+  transform: scale(1.1);
+}
+.navContainer .navLink:hover {
+  color: maroon;
+}
+.navContainer .menuButton:hover {
+  color: maroon;
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.navContainer .logo:hover {
+  transform: scale(1.1);
 }
 @media only screen and (max-width: 600px) {
-  nav li {
+  .navContainer .navMenu {
     display: none;
   }
-  nav .menuButton {
+  .navContainer .menuButton {
     display: block;
   }
 }
-nav li:hover a {
-  color: maroon;
-}
-nav .menuButton:hover {
-  color: maroon;
-  cursor: pointer;
-}
-nav .right {
-  margin-left: auto;
+
+.loading {
+  border-bottom: 5px solid maroon;
+  animation: loading 3s linear;
 }
