just test for header section that with svh

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -16,10 +16,18 @@
   }
 }
 /* Navigation style */
+nav {
+  position: fixed;
+  top: 0;
+  z-index: 100000;
+  width: 100%;
+}
+
 .navContainer {
   background-color: rgb(245, 221, 102);
   display: flex;
   padding: 1%;
+  position: sticky;
 }
 .navContainer .logo {
   color: maroon;
@@ -71,4 +79,24 @@
 .loading {
   border-bottom: 5px solid maroon;
   animation: loading 3s linear;
+}
+
+header {
+  display: flex;
+  position: relative;
+  height: 100svh;
+  align-items: center;
+  justify-content: center;
+  background-color: antiquewhite;
+  overflow: hidden;
+}
+header .importantInfo {
+  color: aliceblue;
+  position: absolute;
+  text-align: center;
+  padding: 10px;
+  background-color: maroon;
+  width: 100%;
+  overflow: hidden;
+  bottom: 0;
 }
